# Guardian-one-web-demo

./: .gitignore  Cargo.toml  README.md  vercel.json
dashboard/: Cargo.toml  index.html  styles.css
dashboard/src/: lib.rs
dashboard/src/components/: attack_arena.rs  metrics.rs  mod.rs
dashboard/src/tabs/: demo.rs  hardware.rs  mod.rs  problem.rs  proof.rs
dashboard/src/tabs/demo/: attacks.rs  component.rs  mod.rs  types.rs  wasm.rs
dashboard/src/tabs/demo/tests/: attack_logic.rs  measurement.rs  mod.rs  state_invariants.rs  voting_logic.rs
dashboard/src/tabs/hardware/: architecture.rs  compliance.rs  component.rs  components.rs  mod.rs  toolchain.rs
dashboard/src/tabs/problem/: comparison.rs  component.rs  mod.rs  quotes.rs  vulnerabilities.rs
dashboard/src/tabs/proof/: component.rs  mod.rs  ota_simulator.rs
docs/: TESTING.md
python-equivalents/: README.md  modbus_parser.py  sensor_driver.py
python-equivalents/attacks/: __init__.py  buffer_overflow.py  data_exfil.py  path_traversal.py
wasm-modules/modbus-parser/: Cargo.toml
wasm-modules/modbus-parser/src/: lib.rs
wasm-modules/sensor-driver/: Cargo.toml
wasm-modules/sensor-driver/src/: lib.rs
wit/: attacks.wit
